--- a/playbooks/install-kubernetes-master-playbook.yml
+++ b/playbooks/install-kubernetes-master-playbook.yml
@@ -25,6 +25,11 @@
           - python3-pip
         state: installed
 
+    - name: Verify the key, using a fingerprint, before import
+      rpm_key:
+          key: https://www.centos.org/keys/RPM-GPG-KEY-CentOS-7
+          fingerprint: 6341 AB27 53D7 8A78 A7C2  7BB1 24C6 A8A7 F4A8 0EB5
+
     - name: Add repository
       yum_repository:
         name: docker-repo
