--- a/playbooks/install-kubernetes-master-playbook.yml
+++ b/playbooks/install-kubernetes-master-playbook.yml
@@ -15,6 +15,9 @@
           - docker-latest-logrotate
           - docker-logrotate
           - docker-engine
+          - deltarpm
+        update_cache: yes
+
         state: removed
     - name: Install required system packages
       yum:
@@ -23,6 +26,8 @@
           - python3
           - openssl
           - python3-pip
+        update_cache: yes
+
         state: installed
 
     - name: Verify the key, using a fingerprint, before import
@@ -34,7 +39,7 @@
       yum_repository:
         name: docker-repo
         description: EPEL YUM repo
-        baseurl:  https://download.docker.com/linux/centos/7/x86_64/stable/repodata
+        baseurl:  https://download.docker.com/linux/centos/7/x86_64/stable/
 
     - name: Add repository
       yum_repository:
@@ -59,6 +64,7 @@
           - kubelet
           - kubeadm
           - kubectl
+        update_cache: yes
         state: installed
 
     -  name: Install Docker Module for Python
