--- a/playbooks/install-kubernetes-master-playbook.yml
+++ b/playbooks/install-kubernetes-master-playbook.yml
@@ -33,7 +33,17 @@
     - name: Verify the key, using a fingerprint, before import
       rpm_key:
           key: https://www.centos.org/keys/RPM-GPG-KEY-CentOS-7
-          fingerprint: 6341 AB27 53D7 8A78 A7C2  7BB1 24C6 A8A7 F4A8 0EB5
+          fingerprint: 6341 AB27 53D7 8A78 A7C2 7BB1 24C6 A8A7 F4A8 0EB5
+
+    - name: Verify the key, using a fingerprint, before import
+      rpm_key:
+          key: https://download.docker.com/linux/centos/gpg
+          fingerprint: 060A 61C5 1B55 8A7F 742B 77AA C52F EB6B 621E 9F35
+
+    - name: Verify the key, using a fingerprint, before import
+      rpm_key:
+          key: https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+
 
     - name: Add repository
       yum_repository:
