--- a/playbooks/install-kubernetes-node-playbook.yml
+++ b/playbooks/install-kubernetes-node-playbook.yml
@@ -4,6 +4,13 @@
   become: true
 
   tasks:
+    - name: setup proxy in docker
+      lineinfile:
+        path: /etc/yum.conf
+        insertafter: '^[main]'
+        line: |
+          proxy={{ http_ansible_proxy }}
+
     - name: Install required system packages
       yum:
         name:
@@ -76,7 +83,7 @@
         regexp: ^ExecStart.*
         replace: 'ExecStart=/usr/bin/dockerd --exec-opt native.cgroupdriver=systemd -H fd:// --containerd=/run/containerd/containerd.sock'
 
-    - name: Ensure the default Apache port is 8080
+    - name: setup proxy in docker
       lineinfile:
         path: /lib/systemd/system/docker.service
         insertafter: '^[Service]'
