--- a/playbooks/install-kubernetes-node-playbook.yml
+++ b/playbooks/install-kubernetes-node-playbook.yml
@@ -35,15 +35,24 @@
       rpm_key:
           key: https://www.centos.org/keys/RPM-GPG-KEY-CentOS-7
           fingerprint: 6341 AB27 53D7 8A78 A7C2 7BB1 24C6 A8A7 F4A8 0EB5
+      environment:
+        http_proxy: '{{ http_ansible_proxy }}'
+        https_proxy: '{{ http_ansible_proxy }}'
 
     - name: Verify the key, using a fingerprint, before import
       rpm_key:
           key: https://download.docker.com/linux/centos/gpg
           fingerprint: 060A 61C5 1B55 8A7F 742B 77AA C52F EB6B 621E 9F35
+      environment:
+        http_proxy: '{{ http_ansible_proxy }}'
+        https_proxy: '{{ http_ansible_proxy }}'
 
     - name: Verify the key, using a fingerprint, before import
       rpm_key:
           key: https://packages.cloud.google.com/yum/doc/rpm-package-key.gpg
+      environment:
+        http_proxy: '{{ http_ansible_proxy }}'
+        https_proxy: '{{ http_ansible_proxy }}'
 
 
     - name: Add repository
@@ -51,19 +60,22 @@
         name: docker-repo
         description: EPEL YUM repo
         baseurl:  https://download.docker.com/linux/centos/7/x86_64/stable/
+        proxy: {{ http_ansible_proxy }}
 
     - name: Add repository
       yum_repository:
         name: kubernetes
         description: kuberenetes
         baseurl: https://packages.cloud.google.com/yum/repos/kubernetes-el7-x86_64
-
+        proxy: {{ http_ansible_proxy }}
 
     - name: Add repository
       yum_repository:
         name: selinux
         description: selinux
         baseurl: http://mirror.centos.org/centos/7/extras/x86_64/
+        proxy: {{ http_ansible_proxy }}
+
     - name: Install required system packages
       yum:
         name:
