--- a/playbooks/install-kubernetes-node-playbook.yml
+++ b/playbooks/install-kubernetes-node-playbook.yml
@@ -143,7 +143,7 @@
       systemd:
         daemon_reload: yes
 
-    - name: {Restart} docker
+    - name: Restart docker
       systemd:
         state: restarted
         daemon_reload: yes
