Make sure things are setup

--- a/playbooks/install-kubernetes-node-playbook.yml
+++ b/playbooks/install-kubernetes-node-playbook.yml
@@ -9,7 +9,7 @@
         path: /etc/yum.conf
         insertafter: '^[main]'
         line: |
-          proxy='{{ http_ansible_proxy }}'
+          proxy={{ http_ansible_proxy }}
 
     - name: Install required system packages
       yum:
