Finally the solution is done

--- a/playbooks/create_terraform_master.yml
+++ b/playbooks/create_terraform_master.yml
@@ -10,17 +10,23 @@
     IP_PUBILC_RANGE: "{{ lookup('env','IP_PUBILC_RANGE') }}"
     IP_PRIVATE_RANGE: "{{ lookup('env','IP_PRIVATE_RANGE') }}"
     TYPE_EC2_INSTANCE: "{{ lookup('env','TYPE_EC2_INSTANCE') }}"
-    NODE_AMOUNT: "{{ lookup('env','NODE_AMOUNT') }}"
+    HARD_DISK_SIZE: "{{ lookup('env','HARD_DISK_SIZE') }}"
     RED_HAT_IMAGE_AMI: "{{ lookup('env','RED_HAT_IMAGE_AMI') }}"
+
+
+    NODE_AMOUNT: "{{ lookup('env','NODE_AMOUNT') }}"
+    WORKSPACE: "{{ lookup('env','WORKSPACE') }}"
 
   tasks:
 
   - debug: msg="Creating Terraform files on jenkins "
+
+  - name: create folders
+    file:
+      path: "{{ WORKSPACE }}/terraform_master/"
+      state: directory
+
   - name: Creating from template master terraform to init
     template:
-      src: "{{ workspace }}/templates/kubernetes_master.j2"
-      dest: "{{ workspace }}/terraform/kubernetes_master.tf"
-  - name: Creating from template node for terraform to init
-    template:
-      src: "{{ workspace }}/templates/kubernetes_master.j2"
-      dest: "{{ workspace }}/terraform/kubernetes_node.tf"
+      src: "{{ WORKSPACE }}/templates/kubernetes_master.j2"
+      dest: "{{ WORKSPACE }}/terraform_master/kubernetes_master.tf"
