--- a/playbooks/install-typha-calinco-node.yml
+++ b/playbooks/install-typha-calinco-node.yml
@@ -65,6 +65,7 @@
                 - hostendpoints
                 - blockaffinities
                 - networksets
+                - ipamconfigs
               verbs:
                 - get
                 - list
@@ -72,6 +73,7 @@
             - apiGroups: ["crd.projectcalico.org"]
               resources:
                 - clusterinformations
+                - ipamconfigs
               verbs:
                 - get
                 - create
