Forgot to create folder

--- a/playbooks/install-calico-node.yml
+++ b/playbooks/install-calico-node.yml
@@ -11,6 +11,11 @@
 
     - name: Creates cni folder
       file:
+        path:  /etc/calico/
+        state: directory
+
+    - name: Creates cni folder
+      file:
         path: /opt/cni/bin/
         state: directory
 
