--- a/playbooks/install-kubernetes-node-playbook.yml
+++ b/playbooks/install-kubernetes-node-playbook.yml
@@ -227,3 +227,8 @@
       systemd:
         state: started
         name: rc-local
+    - name: Creates cni folder
+      file:
+        path:  /etc/calico/confd/config/
+        state: directory
+
