--- a/playbooks/install-kubernetes-master-playbook.yml
+++ b/playbooks/install-kubernetes-master-playbook.yml
@@ -32,11 +32,6 @@
 
     - name: Verify the key, using a fingerprint, before import
       rpm_key:
-          key: https://www.centos.org/keys/RPM-GPG-KEY-CentOS-7
-          fingerprint: 6341 AB27 53D7 8A78 A7C2 7BB1 24C6 A8A7 F4A8 0EB5
-
-    - name: Verify the key, using a fingerprint, before import
-      rpm_key:
           key: https://download.docker.com/linux/centos/gpg
           fingerprint: 060A 61C5 1B55 8A7F 742B 77AA C52F EB6B 621E 9F35
 
@@ -49,21 +44,14 @@
       yum_repository:
         name: docker-repo
         description: EPEL YUM repo
-        baseurl:  https://download.docker.com/linux/centos/7/x86_64/stable/
+        baseurl:  https://download.docker.com/linux/centos/8/x86_64/stable/
 
     - name: Add repository
       yum_repository:
         name: kubernetes
         description: kuberenetes
         baseurl: https://packages.cloud.google.com/yum/repos/kubernetes-el7-x86_64
-
-
-    - name: Add repository
-      yum_repository:
-        name: selinux
-        description: selinux
-        baseurl: http://mirror.centos.org/centos/7/extras/x86_64/
-
+        exclude: kubelet, kubeadm, kubectl
 
     - name: Install required system packages
       yum:
@@ -74,6 +62,7 @@
           - kubelet
           - kubeadm
           - kubectl
+        disable_excludes: kubelet, kubeadm, kubectl
         update_cache: yes
         state: installed
 
