Replace home folder installment and make user variable

--- a/playbooks/configure-felix-configure-bgp.yml
+++ b/playbooks/configure-felix-configure-bgp.yml
@@ -13,6 +13,7 @@
           spec:
             ipipEnabled: true
             routeSource: "CalicoIPAM"
+            logSeverityScreen: Info
             reportingInterval: 0s
         dest: /tmp/felixconfig
         force: no
