--- a/playbooks/install-kubernetes-node-playbook.yml
+++ b/playbooks/install-kubernetes-node-playbook.yml
@@ -153,7 +153,7 @@
 
     - name: restore the manifests folder
       copy:
-        src: {{ workspace }}/etc/kubernetes/run_to_connect_node.sh
+        src: "{{ workspace }}/etc/kubernetes/run_to_connect_node.sh"
         dest: /etc/kubernetes/run_to_connect_node.sh
         remote_src: yes
         directory_mode: yes
